--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,9 +1,19 @@
-{% extends 'blog/base.html' %} 
-{% load staticfiles %}
+{% extends 'blog/base.html' %}
 
 {% block content %}
     {% for post in posts %}
         <div class="post">
+            {% if post.pk in user_posts_pk_liked %}
+                <a class="btn btn-circle like" href="{% url 'post_like' pk=post.pk %}">
+                    <span class="glyphicon glyphicon-heart"></span>
+                    {{ post.posts_liked.count }}
+                </a>
+            {% else %}
+                <a class="btn like" href="{% url 'post_like' pk=post.pk %}">
+                    <span class="glyphicon glyphicon-heart-empty"></span>
+                    {{ post.posts_liked.count }}
+                </a>
+            {% endif %}
             <div class="date">
                 {{ post.published_date }}
             </div>
@@ -12,4 +22,4 @@
             <a href="{% url 'blog.views.post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
         </div>
     {% endfor %}
-{% endblock content %}
+{% endblock %}
