--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine">
     </head>
     <body>
         <div class="page-header">
@@ -26,7 +27,6 @@
                     </a>
                 {% endif %}
             <h1><a href="{% url 'blog.views.post_list' %}">Django Blog</a></h1>
-
         </div>
         <div class="content">
             <div class="row">
