--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -16,6 +16,7 @@
                     <span class="glyphicon glyphicon-pencil"></span>
                 </a>
             <h1>{{ post.title }}</h1>
+            <h2>{{ post.category }}</h2>
             <p>{{ post.text|linebreaks }}</p>
         </div>
         <hr>
