--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,25 +1,33 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    {% for post in posts %}
-        <div class="post">
-            {% if post.pk in user_posts_pk_liked %}
-                <a class="btn btn-circle like" href="{% url 'post_like' pk=post.pk %}">
-                    <span class="glyphicon glyphicon-heart"></span>
-                    {{ post.posts_liked.count }}
-                </a>
-            {% else %}
-                <a class="btn like" href="{% url 'post_like' pk=post.pk %}">
-                    <span class="glyphicon glyphicon-heart-empty"></span>
-                    {{ post.posts_liked.count }}
-                </a>
-            {% endif %}
-            <div class="date">
-                {{ post.published_date }}
+    {% if user.is_authenticated %}
+        {% if posts %}
+            <div class="categories">
+                <h1><a href="{% url 'category_list' %}">Categories</a></h1>
             </div>
-                <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaks }}</p>
-            <a href="{% url 'blog.views.post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
-        </div>
-    {% endfor %}
+        {% endif %}
+        {% for post in posts %}
+            <div class="post">
+                {% if post.pk in user_posts_pk_liked %}
+                    <a class="btn btn-circle like" href="{% url 'post_like' pk=post.pk %}">
+                        <span class="glyphicon glyphicon-heart"></span>
+                        {{ post.posts_liked.count }}
+                    </a>
+                {% else %}
+                    <a class="btn like" href="{% url 'post_like' pk=post.pk %}">
+                        <span class="glyphicon glyphicon-heart-empty"></span>
+                        {{ post.posts_liked.count }}
+                    </a>
+                {% endif %}
+                <div class="date">
+                    {{ post.published_date }}
+                </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <h2><a class="category" href="{% url 'category_post_list' pk=post.category.pk %}">{{ post.category }}</a></h2>
+                <p>{{ post.text|linebreaks }}</p>
+                <a href="{% url 'blog.views.post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
+            </div>
+        {% endfor %}
+    {% endif %}
 {% endblock %}
