--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -5,6 +5,7 @@
         <div class='post'>
         <p class='date'>created: {{ post.created_date|date:'d-m-Y' }}</p>
         <h1><a href="{% url 'blog.views.post_detail' pk=post.pk %}">{{ post.title }} </a></h1>
+        <h2><a href="{% url 'category_post_list' pk=post.category.pk %}">{{ post.category }}</a></h2>
         <p>{{ post.text|truncatechars:200 }}</p>
         </div>
     {% endfor %}
